...
                    }
                }
                Section("Kayıtlı Adreslerim") {
                    if !profile.addresses.isEmpty {
                        ForEach(profile.addresses.indices, id: \.self) { indexPath in
                            NavigationLink("\(profile.addresses[indexPath].area), \(profile.addresses[indexPath].city), \(profile.addresses[indexPath].zip)", destination: CheckoutView(bucket: bucket, profile: profile, addressIndex: indexPath))
                                .accessibilityIdentifier("SelectAddress")
                                .disabled(profile.name.isEmpty)
                        }
                    } else {
                        ContentUnavailableView {
                            Label("Adres yok", systemImage: "exclamationmark.bubble.fill")
                        } description: {
                            Text("Yeni bir adres ekle")
                        }
                    }
                }
                Section("Yeni oluştur") {
                    NavigationLink("Yeni Adres Ekle", destination: NewAddressView(profile: profile))
                        .accessibilityIdentifier("NewAddressButton")
                }
            }
        }
        .navigationTitle("Adreslerim")
    }
}
...
