...
                    }
                }
                Section("Teslimat Bilgileri") {
                    Text("Teslim Alan: \(profile.name)")
                    Text("Adres: \(profile.addresses[addressIndex].area), \(profile.addresses[addressIndex].city), \(profile.addresses[addressIndex].zip)")
                    Toggle("Kapıya Bırak", isOn: $leftAtDoor)
                        .accessibilityIdentifier("LeavePackageButton")
                }
                Section("Ödeme Yöntemi") {
                    Picker("Ödeme Yöntemi", selection: $paymentType) {
                        ForEach(paymentTypes.indices, id: \.self) {
                            Text(paymentTypes[$0])
                        }
...
                            .foregroundStyle(.red)
                    }
                    NavigationLink("Sipariş Ver") {
                        OrderTrackingView(profile: profile)
                            .toolbar(.hidden, for: .navigationBar)
                    }
                    .accessibilityIdentifier("CheckOutButton")
                    .disabled(!canOrder)
                }
            }
            .accessibilityIdentifier("CheckOutView")
            .navigationTitle("Sipariş Özeti")
            .scrollBounceBehavior(.basedOnSize)
...
